# BAMB2026

./: README.md
Module 1/Part 1 Advanced Psychophysics/: README.md
Module 1/Part 2 Bayesian Observers/: README.md
Module 2/part_1/: module2_part1_rl.ipynb
Module 2/part_2/: module2_part2.ipynb
Module 3/: .gitignore  README.md  mini_projects.md  pyproject.toml
Module 3/CRAM-rl-starter/: README.md  REFERENCE.md  requirements.txt
Module 3/CRAM-rl-starter/Libraries/: data.py  metamdp_nhp.py  task_perkins.py  train_reinforce.py
Module 3/CRAM-rl-starter/Notebooks/: 00_meta_mdp.py  01_within_option_looking.py  02_attribute_level_model.py  03_individual_differences.py
Module 3/CRAM-rl-starter/Notebooks/solutions/: 01_within_option_looking.py  02_attribute_level_model.py  03_individual_differences.py
Module 3/part1_rl_basics/: environments.py  tutorial_3a.ipynb
Module 3/part1_sequential_decisions/: README.md  agents.py  plots.py  simulate.py  tutorial_3a.ipynb
Module 3/part2_imitation_learning/: .gitignore  README.md  deploy_blind_chunked.py  robot_setup.md  train_blind_chunked.py  tutorial_3b.ipynb
Module 4/: README.md  day1_block1_dyna_q.ipynb  day1_block2_crp_dyna.ipynb  day1_block3_gp_ucb.ipynb  day2_track1_recovery.ipynb  day2_track2_gpucb_foraging.ipynb  environments.py  models.py  recovery.py  wu2025.py
Module 5/: README.md  tutorial1_zebrafish_latent_dynamics.ipynb  tutorial1_zebrafish_latent_dynamics_solutions.ipynb  tutorial2_fly_nonlinear_dynamics.ipynb  tutorial2_fly_nonlinear_dynamics_solution.ipynb  tutorial2_kuramoto_explorer.ipynb
(+4 files in other folders)
