[project]
name = "module3-reinforcement-learning"
version = "0.1.0"
description = "BAMB! 2026 — Module 3, Reinforcement Learning"
authors = [{ name = "nisheetpatel", email = "nisheet.pat@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "matplotlib>=3.9.1",
    "seaborn>=0.13.2",
    "gymnasium>=1.1.0",
    "minigrid>=3.0.0",
    "ipython>=8.26.0",
    "ipykernel>=6.29.5",
    "tqdm>=4.66.4",
]

[dependency-groups]
dev = [
    "ruff>=0.5.1",
    "pytest>=8.2.2",
    "jupyterlab>=4.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["part1_sequential_decisions"]

[tool.ruff]
# the tutorial notebook is teaching material: it deliberately redefines the agents
# that students have just written, so we leave it alone
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pyupgrade, bugbear.
# docstring rules (D) are intentionally left out: we don't want to require
# docstrings on every module, class, and function
select = ["E", "W", "F", "I", "UP", "B"]
